refactoring nexus